// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.Expand childrenColumnName 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead>
          <tr>
            <th
              class="rc-table-cell"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
              Lucy
            </td>
            <td
              class="rc-table-cell"
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-1"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-1"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jim
            </td>
            <td
              class="rc-table-cell"
            >
              1
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Expand renders fixed column correctly 1`] = `
<div
  class="rc-table rc-table-fixed-column rc-table-has-fix-left rc-table-has-fix-right"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
      style="overflow-x: scroll;"
    >
      <table
        style="width: 903px; min-width: 100%; table-layout: fixed;"
      >
        <colgroup>
          <col
            class="rc-table-expand-icon-col"
          />
          <col />
          <col />
          <col />
        </colgroup>
        <thead>
          <tr>
            <th
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left"
              style="position: sticky; left: 0px;"
            />
            <th
              class="rc-table-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
            >
              Age
            </th>
            <th
              class="rc-table-cell rc-table-cell-fix-right rc-table-cell-fix-right-first"
              style="position: sticky; right: 0px;"
            >
              Gender
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
          >
            <td
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left"
              style="position: sticky; left: 0px;"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
            </td>
            <td
              class="rc-table-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            >
              Lucy
            </td>
            <td
              class="rc-table-cell"
            >
              27
            </td>
            <td
              class="rc-table-cell rc-table-cell-fix-right rc-table-cell-fix-right-first"
              style="position: sticky; right: 0px;"
            >
              F
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row rc-table-expanded-row-level-1"
          >
            <td
              class="rc-table-cell"
              colspan="4"
            >
              <div
                class="rc-table-expanded-row-fixed"
                style="width: 1128px; position: sticky; left: 0px; overflow: hidden;"
              >
                <p>
                  extra data
                </p>
              </div>
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
          >
            <td
              class="rc-table-cell rc-table-row-expand-icon-cell rc-table-cell-fix-left"
              style="position: sticky; left: 0px;"
            >
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
            </td>
            <td
              class="rc-table-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
              style="position: sticky; left: 0px;"
            >
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
            <td
              class="rc-table-cell rc-table-cell-fix-right rc-table-cell-fix-right-first"
              style="position: sticky; right: 0px;"
            >
              M
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row rc-table-expanded-row-level-1"
          >
            <td
              class="rc-table-cell"
              colspan="4"
            >
              <div
                class="rc-table-expanded-row-fixed"
                style="width: 1128px; position: sticky; left: 0px; overflow: hidden;"
              >
                <p>
                  extra data
                </p>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Expand renders tree row correctly 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead>
          <tr>
            <th
              class="rc-table-cell"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded"
              />
              Lucy
            </td>
            <td
              class="rc-table-cell"
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-1"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-1"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jim
            </td>
            <td
              class="rc-table-cell"
            >
              1
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Expand renders tree row correctly with different children 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead>
          <tr>
            <th
              class="rc-table-cell"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
            >
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              Lucy
            </td>
            <td
              class="rc-table-cell"
            >
              27
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
          >
            <td
              class="rc-table-cell rc-table-cell-with-append"
            >
              <span
                class="rc-table-row-indent indent-level-0"
              />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced"
              />
              Jack
            </td>
            <td
              class="rc-table-cell"
            >
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
